# NGLFeatherGen

./: CMakeLists.txt  README.md
include/: Curve.h  Feather.h  NGLScene.h  mainwindow.h
src/: Curve.cpp  Feather.cpp  NGLScene.cpp  main.cpp  mainwindow.cpp
tests/: FeatherTest.cpp
ui/: mainwindow.ui
